--- a/h8dsft_testing.ipynb
+++ b/h8dsft_testing.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NGC 3 Phase 0 Week 1 Day 4"
+    "# NGC 4 Phase 0 Week 1 Day 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Library System dari NGC 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,69 +101,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Perubahan dibagian function `search_book` dan `display_catalog`, function me-return variabel. Objek `book` untuk search, dan list `bookcatalog` untuk display, keduanya menyimpan data yang akan didisplay. Variabel ini yang akan digunakan pada assertion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unit Testing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TestLibraryCatalog(unittest.TestCase):\n",
+    "\n",
+    "    def test_add_book(self):\n",
+    "\n",
+    "        self.library = LibraryCatalog()\n",
+    "\n",
+    "        self.book1 = Book(1, \"1984\", \"George Orwell\")\n",
+    "        self.book2 = Book(2, \"Harry Potter and the Sorcerer's Stone\", \"J.K. Rowling\")\n",
+    "        self.book3 = Book(3, \"The Hunger Games\", \"Suzanne Collins\")\n",
+    "\n",
+    "        self.library.add_book(self.book1)\n",
+    "        self.library.add_book(self.book2)\n",
+    "        self.library.add_book(self.book3)\n",
+    "        self.assertIn(self.book1, self.library.catalog)\n",
+    "        self.assertIn(self.book2, self.library.catalog)\n",
+    "        self.assertIn(self.book3, self.library.catalog)\n",
+    "    \n",
+    "    def test_search_book(self):\n",
+    "        self.library = LibraryCatalog()\n",
+    "        self.book1 = Book(1, \"1984\", \"George Orwell\")\n",
+    "\n",
+    "        self.library.add_book(self.book1)\n",
+    "        self.assertEqual(self.library.search_book(\"1984\"), self.book1)\n",
+    "        self.assertRaises(KeyError, self.library.search_book, \"The Hunger Games\")\n",
+    "\n",
+    "    def test_remove_book(self):\n",
+    "        self.library = LibraryCatalog()\n",
+    "        self.book1 = Book(1, \"1984\", \"George Orwell\")\n",
+    "\n",
+    "        self.library.add_book(self.book1)\n",
+    "\n",
+    "        self.library.delete_book(\"1984\")\n",
+    "        self.assertNotIn(self.book1, self.library.catalog)\n",
+    "        self.assertRaises(KeyError, self.library.delete_book, \"The Hunger Games\")\n",
+    "    \n",
+    "    def test_display_book(self):\n",
+    "        self.library = LibraryCatalog()\n",
+    "\n",
+    "        self.book1 = Book(1, \"1984\", \"George Orwell\")\n",
+    "        self.book2 = Book(2, \"Harry Potter and the Sorcerer's Stone\", \"J.K. Rowling\")\n",
+    "\n",
+    "        self.library.add_book(self.book1)\n",
+    "        self.library.add_book(self.book2)\n",
+    "\n",
+    "        self.assertEqual(self.library.display_catalog(), [self.book1, self.book2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.006s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Book 1984 from author George Orwell added\n",
       "Book Harry Potter and the Sorcerer's Stone from author J.K. Rowling added\n",
-      "Book Harry Potter from author J.K. Rowling added\n",
+      "Book The Hunger Games from author Suzanne Collins added\n",
+      "Book 1984 from author George Orwell added\n",
+      "Book Harry Potter and the Sorcerer's Stone from author J.K. Rowling added\n",
       "ID: 1 | Title: 1984 | Author: George Orwell\n",
       "ID: 2 | Title: Harry Potter and the Sorcerer's Stone | Author: J.K. Rowling\n",
-      "ID: 3 | Title: Harry Potter | Author: J.K. Rowling\n",
+      "Book 1984 from author George Orwell added\n",
+      "Book 1984 from author George Orwell deleted\n",
+      "Book 1984 from author George Orwell added\n",
       "Found: \n",
-      " ID: 2 | Title: Harry Potter and the Sorcerer's Stone | Author: J.K. Rowling\n"
+      " ID: 1 | Title: 1984 | Author: George Orwell\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Book at 0x201d1184460>"
+       "<unittest.main.TestProgram at 0x1c433547640>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "library = LibraryCatalog()\n",
-    "book1 = Book(1, \"1984\", \"George Orwell\")\n",
-    "book2 = Book(2, \"Harry Potter and the Sorcerer's Stone\", \"J.K. Rowling\")\n",
-    "book3 = Book(3, \"Harry Potter\", \"J.K. Rowling\")\n",
-    "\n",
-    "library.add_book(book1)\n",
-    "library.add_book(book2)\n",
-    "library.add_book(book3)\n",
-    "\n",
-    "library.display_catalog()\n",
-    "\n",
-    "library.search_book(\"J.K. Rowling\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Book Harry Potter from author J.K. Rowling deleted\n",
-      "\"Book doesn't exist in the catalog\"\n",
-      "\"Book doesn't exist in the catalog\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "library.delete_book(\"Harry Potter\")\n",
-    "library.search_book(\"Harry Potter\")\n",
-    "library.delete_book(\"Harry Potter\")"
+    "unittest.main(argv=[''], exit=False)"
    ]
   }
  ],
